--- a/hypergraphs.ipynb
+++ b/hypergraphs.ipynb
@@ -531,10 +531,10 @@
    "source": [
     "### Conservation laws\n",
     "\n",
-    "It is not very clear to me how you draew the horizontal/vertical lines to identify the various bits of the conservation laws\n",
+    "It is not very clear to me how you draw the horizontal/vertical lines to identify the various bits of the conservation laws\n",
     "\n",
-    "- the vertical line should simply be the interval vs extenral species\n",
-    "- th ehorizontal line seems to be just after the first row, but it is not clear why. There must be a simple way to figure this out automatically."
+    "- the vertical line should simply be the interval vs external species\n",
+    "- the horizontal line seems to be just after the first row, but it is not clear why. There must be a simple way to figure this out automatically."
    ]
   },
   {
