--- a/hypergraphs.ipynb
+++ b/hypergraphs.ipynb
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,10 @@
     "            repr_str += string_row + \"\\n\"\n",
     "        \n",
     "        return repr_str\n",
-    "    \n"
+    "    \n",
+    "    def dummy(self):\n",
+    "        \"\"\"A dummy function to test the class\"\"\"\n",
+    "        print(\"hello\")\n"
    ]
   },
   {
@@ -205,23 +208,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       " -1   1   0\n",
-       "  1  -1  -1\n",
-       "  0   0   1\n",
-       "-----------\n",
-       " -1   0  -1\n",
-       "  0   1   0"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello\n"
+     ]
     }
    ],
    "source": [
@@ -235,7 +230,30 @@
     "        [0,1,0],]),\n",
     "        2\n",
     ")\n",
-    "nabla_1"
+    "nabla_1.dummy()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "integer1 = 78\n",
+    "integer2 = 56\n",
+    "integer1 + integer2 == integer1.__add__(integer2)"
    ]
   },
   {
@@ -657,11 +675,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m1 = Module (LabelledStoichiometricMatrix,params1 )\n",
+    "m2 = Module (LabelledStoichiometricMatrix,params2 )\n",
+    "\n",
+    "m3 = m1 + m2\n",
+    "m3.ConductanceMatrix\n",
+    "m3.fundamental_currents\n",
+    "m3.conservation_laws"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "conductance",
    "language": "python",
    "name": "python3"
   },
