--- a/students/Will/compiling_algorithm.ipynb
+++ b/students/Will/compiling_algorithm.ipynb
@@ -52,23 +52,7 @@
    "execution_count": null,
    "id": "b827dc95",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle \\left[\\begin{matrix}1 & 1 & 1 & 0 & 0\\\\-2 & -1 & 0 & 1 & 1\\end{matrix}\\right]$"
-      ],
-      "text/plain": [
-       "⎡1   1   1  0  0⎤\n",
-       "⎢               ⎥\n",
-       "⎣-2  -1  0  1  1⎦"
-      ]
-     },
-     "execution_count": 121,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "\n",
@@ -146,15 +130,28 @@
     "            return cycle_matrix\n",
     "        \n",
     "    #==========================================================================================================================================\n",
-    "    # CONSERVATION LAW MATRIX\n",
+    "    # COUPLING MATRICES\n",
+    "    #  \n",
+    "\n",
+    "    def coupling_matrix(self):\n",
+    "\n",
+    "        cycle_matrix = self.reaction_cycles_matrix()\n",
+    "\n",
+    "        phi = self.external_SM * cycle_matrix\n",
+    "\n",
+    "        return phi\n",
+    "\n",
+    "\n",
+    "    #==========================================================================================================================================\n",
+    "    # CONSERVATION LAW MATRICES\n",
     "    #\n",
-    "    def conservation_laws_matrix(self):\n",
+    "    def conservation_laws(self):\n",
     "\n",
     "        cokernel_SM = (self.matrix.T).nullspace() # finds the cokernel of the full SM\n",
     "\n",
     "        if not cokernel_SM:\n",
     "\n",
-    "            print(\"Cokernel of Stoichiometric Matrix empty. No conservation laws.\")\n",
+    "            print(\"No conservation laws. Cokernel of Stoichiometric Matrix empty.\")\n",
     "\n",
     "        else:\n",
     "\n",
@@ -164,8 +161,41 @@
     "\n",
     "                cons_laws = cons_laws.row_join(vec)\n",
     "\n",
-    "            return cons_laws.T # to put in same form as paper, transpose matrix\n",
     "\n",
+    "        #\n",
+    "        # Broken external laws for chemostat , deriving from the coupling matrix\n",
+    "        #\n",
+    "\n",
+    "        coupling_matrix = self.coupling_matrix() # define the coupling matrix using the function defined previously\n",
+    "\n",
+    "        cokernel_coupling_matrix = coupling_matrix.T.nullspace() # find the cokernel of the coupling matrix\n",
+    "\n",
+    "        if not cokernel_coupling_matrix:\n",
+    "\n",
+    "            print(\"No chemostat conservation laws. Cokernel of Coupling Matrix is empty.\")\n",
+    "\n",
+    "        # if cokernel is NOT empty\n",
+    "\n",
+    "        else:\n",
+    "\n",
+    "            chemostat_laws = cokernel_coupling_matrix[0] # add first vector to chemostat conservation law matrix so we can add rest later\n",
+    "\n",
+    "            for law in cokernel_coupling_matrix[1:]: # starting at second vector in kernel\n",
+    "\n",
+    "                chemostat_laws = chemostat_laws.row_join(law) # connect vectors from kernel column-wise, row_join puts elemetns of adjacent vectors together\n",
+    "\n",
+    "\n",
+    "        return cons_laws.T, chemostat_laws.T # return transpose to match equations in paper\n",
+    "    \n",
+    "    #==========================================================================================================================================\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "        \n",
+    "\n",
+    "    \n",
     "\n",
     "        \n",
     "\n",
@@ -184,24 +214,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 151,
    "id": "8d84da64",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\left[\\begin{matrix}1 & 1 & 1 & 1 & 0 & 0 & 0 & 0\\\\-1 & -1 & -1 & 0 & 1 & 1 & 0 & 0\\\\-1 & 0 & 0 & 0 & 0 & 0 & 1 & 1\\end{matrix}\\right]$"
+       "$\\displaystyle \\left[\\begin{matrix}1 & 1 & 0 & 0\\\\0 & 0 & 1 & 1\\end{matrix}\\right]$"
       ],
       "text/plain": [
-       "⎡1   1   1   1  0  0  0  0⎤\n",
-       "⎢                         ⎥\n",
-       "⎢-1  -1  -1  0  1  1  0  0⎥\n",
-       "⎢                         ⎥\n",
-       "⎣-1  0   0   0  0  0  1  1⎦"
+       "⎡1  1  0  0⎤\n",
+       "⎢          ⎥\n",
+       "⎣0  0  1  1⎦"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +247,7 @@
     "\n",
     "mod2 = stoich_matrix(stoich_matrix_2, 4)\n",
     "\n",
-    "mod2.conservation_laws_matrix()"
+    "mod2.conservation_laws()[1]"
    ]
   },
   {
