--- a/students/Will/compiling_algorithm.ipynb
+++ b/students/Will/compiling_algorithm.ipynb
@@ -214,22 +214,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 204,
    "id": "8d84da64",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\left[\\begin{matrix}1 & 1 & 0 & 0\\\\0 & 0 & 1 & 1\\end{matrix}\\right]$"
+       "$\\displaystyle \\left[ \\left[\\begin{matrix}-1\\\\1\\\\0\\\\0\\end{matrix}\\right], \\  \\left[\\begin{matrix}0\\\\0\\\\-1\\\\1\\end{matrix}\\right]\\right]$"
       ],
       "text/plain": [
-       "⎡1  1  0  0⎤\n",
-       "⎢          ⎥\n",
-       "⎣0  0  1  1⎦"
+       "⎡⎡-1⎤  ⎡0 ⎤⎤\n",
+       "⎢⎢  ⎥  ⎢  ⎥⎥\n",
+       "⎢⎢1 ⎥  ⎢0 ⎥⎥\n",
+       "⎢⎢  ⎥, ⎢  ⎥⎥\n",
+       "⎢⎢0 ⎥  ⎢-1⎥⎥\n",
+       "⎢⎢  ⎥  ⎢  ⎥⎥\n",
+       "⎣⎣0 ⎦  ⎣1 ⎦⎦"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 204,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,13 +251,103 @@
     "\n",
     "mod2 = stoich_matrix(stoich_matrix_2, 4)\n",
     "\n",
-    "mod2.conservation_laws()[1]"
+    "mod2.conservation_laws()[1].nullspace()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 201,
+   "id": "3a6e4b93",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "no symbols given",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[201], line 30\u001b[0m\n\u001b[1;32m     26\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m n \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(string_of_reaction_names)):\n\u001b[1;32m     28\u001b[0m     current_reaction \u001b[38;5;241m=\u001b[39m string_of_reaction_names[\u001b[38;5;241m4\u001b[39m\u001b[38;5;241m*\u001b[39mn: \u001b[38;5;241m4\u001b[39m\u001b[38;5;241m*\u001b[39mn \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m2\u001b[39m], string_of_reaction_names[\u001b[38;5;241m4\u001b[39m\u001b[38;5;241m*\u001b[39mn: \u001b[38;5;241m4\u001b[39m\u001b[38;5;241m*\u001b[39mn \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m2\u001b[39m]\n\u001b[0;32m---> 30\u001b[0m     \u001b[38;5;28mglobals\u001b[39m()[current_reaction] \u001b[38;5;241m=\u001b[39m symbols(current_label)\n",
+      "File \u001b[0;32m/opt/anaconda3/lib/python3.12/site-packages/sympy/core/symbol.py:781\u001b[0m, in \u001b[0;36msymbols\u001b[0;34m(names, cls, **args)\u001b[0m\n\u001b[1;32m    779\u001b[0m     names \u001b[38;5;241m=\u001b[39m names[:\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]\u001b[38;5;241m.\u001b[39mrstrip()\n\u001b[1;32m    780\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m names:\n\u001b[0;32m--> 781\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mno symbols given\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m    783\u001b[0m \u001b[38;5;66;03m# split on commas\u001b[39;00m\n\u001b[1;32m    784\u001b[0m names \u001b[38;5;241m=\u001b[39m [n\u001b[38;5;241m.\u001b[39mstrip() \u001b[38;5;28;01mfor\u001b[39;00m n \u001b[38;5;129;01min\u001b[39;00m names\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m,\u001b[39m\u001b[38;5;124m'\u001b[39m)]\n",
+      "\u001b[0;31mValueError\u001b[0m: no symbols given"
+     ]
+    }
+   ],
+   "source": [
+    "# Algorithm for creating current vectors from a list of species and kinetic rates from the SM of module 1\n",
+    "\n",
+    "# module 1 SM\n",
+    " \n",
+    "SM_1 = Matrix( [[-1, 1, 0], [1, -1, -1], [0, 0, 1], [-1, 0, -1], [0, 1, 0]] ) # The SM of module 1\n",
+    "\n",
+    "num_internal_species = 3 # for extracting the internal and external SMs\n",
+    "\n",
+    "num_cols = SM_1.cols\n",
+    "\n",
+    "#\n",
+    "# create reaction labels for this SM\n",
+    "#\n",
+    "\n",
+    "string_of_reaction_names = \"\"\n",
+    "\n",
+    "for n in range(num_cols):\n",
+    "\n",
+    "    string_of_reaction_names += f\"j{n+1}, \"\n",
+    "\n",
+    "#print(string_of_reaction_names)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "for n in range(len(string_of_reaction_names)):\n",
+    "\n",
+    "    current_reaction = string_of_reaction_names[4*n: 4*n +2], string_of_reaction_names[4*n: 4*n +2]\n",
+    "\n",
+    "    globals()[current_reaction] = symbols(current_label)\n",
+    "\n",
+    "    \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a6e4b93",
+   "id": "c78d3571",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reaction symbols: (j1, j2, j3, j4, j5)\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'j1' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[163], line 15\u001b[0m\n\u001b[1;32m     12\u001b[0m reaction_symbols \u001b[38;5;241m=\u001b[39m sp\u001b[38;5;241m.\u001b[39msymbols(string_for_symbolic_assignment)\n\u001b[1;32m     13\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mReaction symbols:\u001b[39m\u001b[38;5;124m\"\u001b[39m, reaction_symbols)\n\u001b[0;32m---> 15\u001b[0m j1\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'j1' is not defined"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "de389011",
    "metadata": {},
    "outputs": [],
    "source": []
