--- a/students/Will/compiling_algorithm.ipynb
+++ b/students/Will/compiling_algorithm.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# imports\n",
+    "# all imports\n",
     "\n",
     "import hypernetx as hnx\n",
     "import numpy as np\n",
