--- a/students/Will/compiling_algorithm.ipynb
+++ b/students/Will/compiling_algorithm.ipynb
@@ -58,17 +58,35 @@
     "\n",
     "# Define our class:\n",
     "\n",
-    "class stoich_matrix:\n",
+    "class stoich_matrix: #FT: Capital letter to define class\n",
     "\n",
     "    #==========================================================================================================================================\n",
     "    # INIT\n",
     "    #\n",
     "\n",
     "    def __init__(self, SM, num_internal_species):\n",
+    "        \"\"\"\n",
+    "        HOW DO YOU EXPECT THIS TO WORK?\n",
+    "        INPUTS? OUTPUTS? (Operations that are possible...)\n",
     "\n",
-    "        #\n",
-    "        # Define some objects to hold the full SM, internal and external SMs:\n",
-    "        #\n",
+    "        Attributes: [CHECK THESE]\n",
+    "\n",
+    "            - self.matrix : full stoichiometric matrix \n",
+    "            - self.internal_SM : internal species stoichiometric matrix\n",
+    "            - self.external_SM : external species stoichiometric matrix\n",
+    "            - self.module_1_labels : labels for the species in module 1\n",
+    "\n",
+    "        Methods: [CHECK THESE]\n",
+    "\n",
+    "            - hypergraph_internals() : creates hypergraph for internal species\n",
+    "            - hypergraph_full() : creates hypergraph for full stoichiometric matrix\n",
+    "            - reaction_cycles_matrix() : finds the reaction level cycles from the internal stoichiometric matrix\n",
+    "            - coupling_matrix() : finds the coupling matrix from the external stoichiometric matrix and the\n",
+    "            - reaction cycles matrix\n",
+    "            - conservation_laws() : finds the conservation laws from the full stoichiometric matrix and\n",
+    "\n",
+    "\n",
+    "        \"\"\"\n",
     "\n",
     "        self.matrix = SM # Returns the passed SM, ready for print\n",
     "\n",
@@ -138,7 +156,8 @@
     "        cycle_matrix = self.reaction_cycles_matrix()\n",
     "\n",
     "        phi = self.external_SM * cycle_matrix\n",
-    "\n",
+    "        self.phi = phi\n",
+    "        \n",
     "        return phi\n",
     "\n",
     "\n",
