--- a/students/revamped_algoritm.ipynb
+++ b/students/revamped_algoritm.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "0acc5891",
    "metadata": {},
    "outputs": [],
@@ -296,6 +296,9 @@
     "    def labels(self):\n",
     "        return self.hypergraph_labels\n",
     "\n",
+    "    def __add__(self, other):\n",
+    "        something =  CombiningModules(self, other)\n",
+    "        return ModuleProperties.extra_constructor(something)\n",
     "\n",
     "# -------------------------------------------------------------------------\n",
     "# CombiningModules\n",
@@ -696,7 +699,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "conductance",
    "language": "python",
    "name": "python3"
   },
@@ -710,7 +713,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
