commented on the pis

--- a/students/revamped_algoritm.ipynb
+++ b/students/revamped_algoritm.ipynb
@@ -471,9 +471,11 @@
     "    # -------------------------\n",
     "    def _compute_pi_and_PI(self):\n",
     "        \"\"\"Compute pi, pi_1_3, pi_2_3 and PI_1_3, PI_2_3.\"\"\"\n",
+    "        # This is potentially too computationally intense if the matrix is growing in size rapidly\n",
+    "\n",
     "        self.pi = sympy.Matrix(self.L_i.pinv() * self.L_e)\n",
     "        self.pi_rows, self.pi_cols = self.pi.shape\n",
-    "\n",
+    "        # block construction of the pi matrices\n",
     "        self.identity_part_1 = sympy.eye(len(self.mod1_left_current), self.pi_cols)\n",
     "        self.pi_1_3 = self.identity_part_1.col_join(self.pi)\n",
     "\n",
