updated to now work when input modules have more than 1 overlapping species (tested with 2 overlapping species)

--- a/students/Will/combined_module_SM.ipynb
+++ b/students/Will/combined_module_SM.ipynb
@@ -36,7 +36,7 @@
     "stoich_matrix_1 = Matrix( [[-1,1,0], [1,-1,-1], [0,0,1], [-1,0,-1], [0,1,0]])\n",
     "num_internal_species_1 = 3\n",
     "labels_1 = {0: 'Ea', 1: 'EaS', 2: 'EaS2', 3: 'S', 4: 'Na'}\n",
-    "species_names1 = [\"Ea\", \"EaS\", \"EaS2\", \"S\", \"Na\"]\n",
+    "\n",
     "\n",
     "stoich_matrix_2 = Matrix([[-1, 0, 1, 0, 0], # first row of internal\n",
     "                           [1, -1, 0, -1, 0], \n",
@@ -49,7 +49,7 @@
     "\n",
     "num_internal_species_2 = 4\n",
     "labels_2 = {0: 'Eb', 1: 'EbF', 2: 'EbW', 3: 'Eb*', 4: 'Na', 5: 'Nb', 6: 'F', 7: 'W'}\n",
-    "species_names2 = [\"Eb\", \"EbF\", \"EbW\", \"Eb*\", \"Na\", \"Nb\", \"F\", \"W\"]\n"
+    "\n"
    ]
   },
   {
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 5,
    "id": "11355fc1",
    "metadata": {},
    "outputs": [],
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 6,
    "id": "3ecc6ceb",
    "metadata": {},
    "outputs": [
@@ -102,7 +102,7 @@
        "[ 0,  0,  1]])"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 7,
    "id": "f44e3642",
    "metadata": {},
    "outputs": [
@@ -130,7 +130,7 @@
        "[ 0,  0,  0,  1, -1]])"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 57,
    "id": "35cfe884",
    "metadata": {},
    "outputs": [],
@@ -166,7 +166,7 @@
     "        self.find_conjugated_rows()  \n",
     "\n",
     "        \n",
-    "    def find_matching_species(self):\n",
+    "    def find_matching_species(self):  # adpated from JW\n",
     "        \"\"\"\n",
     "        Find indices of matching external species between mod1 and mod2.\n",
     "        \"\"\"\n",
@@ -181,7 +181,8 @@
     "        self.mod2_external_species_list = {\n",
     "            i: v for i, v in enumerate(list(self.mod2.labels.values())[self.mod2.internal_SM.rows:])\n",
     "        }\n",
-    "\n",
+    "        # print(self.mod1_external_species_list)\n",
+    "        # print(self.mod2_external_species_list)\n",
     "        # takes the dictionary of external species and finds the indices in each dict at which the species are the same\n",
     "        # , stores in the list self.matching_species\n",
     "\n",
@@ -192,6 +193,7 @@
     "                    self.matching_species.append((key1, key2))\n",
     "\n",
     "        #  if there ARE overlapping species: convert the new list into two new lists of indexes and species names\n",
+    "        # print(self.matching_species)\n",
     "\n",
     "        if self.matching_species:\n",
     "            self.keys_1, self.keys_2 = zip(*self.matching_species)\n",
@@ -200,6 +202,9 @@
     "        else:\n",
     "            self.keys_1, self.keys_2 = [], [] # returns an empty list overwise to prevent errors\n",
     "\n",
+    "        # print(\"Keys:\")\n",
+    "        # print(len(self.keys_1))\n",
+    "        # print(self.keys_2)\n",
     "        return self.keys_1, self.keys_2\n",
     "\n",
     "        # So now we know the position of overlapping species in the two dicts of species names defined outside the class\n",
@@ -216,17 +221,23 @@
     "\n",
     "            overlapping_species_rows_mod1.append((self.mod1.matrix)[self.keys_1[i] + self.mod1.num_internal_species, :])\n",
     "\n",
+    "        # print(\"overlapping species row for mod1: \")\n",
+    "        # print(overlapping_species_rows_mod1)\n",
+    "\n",
     "        overlapping_species_rows_mod2 = []\n",
     "\n",
     "        for i in range(len(self.keys_1)):\n",
     "\n",
     "            overlapping_species_rows_mod2.append((self.mod2.matrix)[self.keys_2[i] + self.mod2.num_internal_species, :])\n",
     "\n",
+    "        # print(\"overlapping species row for mod2: \")\n",
+    "        # print(overlapping_species_rows_mod2)\n",
+    "\n",
     "        # conjugate the two rows for each overalpping species:\n",
     "\n",
     "        conjugated_rows = []\n",
     "\n",
-    "        for k in range(len(overlapping_species_rows_mod1)):\n",
+    "        for k in range(len(self.keys_1)):\n",
     "\n",
     "            conjugated_rows.append(overlapping_species_rows_mod1[k].row_join(overlapping_species_rows_mod2[k]))\n",
     "        \n",
@@ -263,7 +274,9 @@
     "        new_SM_line_2 = self.conjugated_rows[0]\n",
     "        \n",
     "        for vector in self.conjugated_rows[1:]:\n",
-    "            new_SM_line_2.col_join(vector)\n",
+    "            new_SM_line_2 = new_SM_line_2.col_join(vector)\n",
+    "            # print(\"Block containing overlapping species:\")\n",
+    "            # print(new_SM_line_2)\n",
     "        #========================================\n",
     "    \n",
     "        new_SM_line_3 = lower_left_internals.row_join(self.mod2.internal_SM)\n",
@@ -277,6 +290,7 @@
     "        # Final SM\n",
     "\n",
     "        new_SM = new_SM_line_1.col_join(new_SM_line_2).col_join(new_SM_line_3).col_join(new_SM_line_4).col_join(new_SM_line_5)\n",
+    "\n",
     "\n",
     "        return new_SM\n",
     "\n",
@@ -293,11 +307,39 @@
    "cell_type": "markdown",
    "id": "7f588437",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Test with modules 1,2 from 2025 paper: WORKS"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 60,
+   "id": "ea1c6e49",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stoich_matrix_1 = Matrix( [[-1,1,0], [1,-1,-1], [0,0,1], [-1,0,-1], [0,1,0]])\n",
+    "num_internal_species_1 = 3\n",
+    "labels_1 = {0: 'Ea', 1: 'EaS', 2: 'EaS2', 3: 'S', 4: 'Na'}\n",
+    "\n",
+    "\n",
+    "stoich_matrix_2 = Matrix([[-1, 0, 1, 0, 0], # first row of internal\n",
+    "                           [1, -1, 0, -1, 0], \n",
+    "                           [0, 1, -1, 0, 1], \n",
+    "                           [0, 0, 0, 1, -1],\n",
+    "                             [0, 0, 0, -1, 0], # first row external \n",
+    "                             [0, 0, 0, 0, 1],\n",
+    "                             [-1, 0, 0, 0, 0],\n",
+    "                             [0, 0, 1, 0, 0]])\n",
+    "\n",
+    "num_internal_species_2 = 4\n",
+    "labels_2 = {0: 'Eb', 1: 'EbF', 2: 'EbW', 3: 'Eb*', 4: 'Na', 5: 'Nb', 6: 'F', 7: 'W'}\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
    "id": "c6b0b32b",
    "metadata": {},
    "outputs": [
@@ -322,48 +364,95 @@
        "[ 0,  0,  0,  0,  0,  1,  0,  0]])"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "mod1 = AssignProperties(stoich_matrix_1, num_internal_species_1, labels_1)\n",
+    "mod2 = AssignProperties(stoich_matrix_2, num_internal_species_2, labels_2)\n",
+    "\n",
     "l = CombinedSM(mod1,mod2)\n",
     "l.construct_new_SM()"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f24d70f6",
+   "metadata": {},
+   "source": [
+    "# Test with a different two modules which overlap at 2 species: WORKS"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 143,
-   "id": "668caa5c",
+   "execution_count": 69,
+   "id": "26baf4bc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "SM_1 = Matrix([[-1,1,0],[1,-1,-1],[-1,0,-1],[0,0,1],[0,1,0]])\n",
+    "internals_1 = 2\n",
+    "SM_2 = Matrix([[-1,0,1],[1,-1,0],[0,1,-1],[-1,0,0],[0,0,-1],[0,1,0]])\n",
+    "internals_2 = 3\n",
+    "\n",
+    "labels_1_new = {0: 'B', 1: 'C', 2: 'A', 3: 'D', 4: 'E'}\n",
+    "labels_2_new = {0: 'F', 1: 'G', 2: 'H', 3: 'D', 4: 'E', 5:'I'}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "1cfbd734",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "M1 = AssignProperties(SM_1, internals_1, labels_1_new)\n",
+    "\n",
+    "M2 = AssignProperties(SM_2, internals_2, labels_2_new)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "c937fe49",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\left[\\begin{matrix}0 & 0 & 0 & -1 & 0\\\\0 & 0 & 0 & 0 & 1\\\\-1 & 0 & 0 & 0 & 0\\\\0 & 0 & 1 & 0 & 0\\end{matrix}\\right]$"
+       "$\\displaystyle \\left[\\begin{matrix}-1 & 1 & 0 & 0 & 0 & 0\\\\1 & -1 & -1 & 0 & 0 & 0\\\\0 & 0 & 1 & -1 & 0 & 0\\\\0 & 1 & 0 & 0 & 0 & -1\\\\0 & 0 & 0 & -1 & 0 & 1\\\\0 & 0 & 0 & 1 & -1 & 0\\\\0 & 0 & 0 & 0 & 1 & -1\\\\-1 & 0 & -1 & 0 & 0 & 0\\\\0 & 0 & 0 & 0 & 1 & 0\\end{matrix}\\right]$"
       ],
       "text/plain": [
        "Matrix([\n",
-       "[ 0, 0, 0, -1, 0],\n",
-       "[ 0, 0, 0,  0, 1],\n",
-       "[-1, 0, 0,  0, 0],\n",
-       "[ 0, 0, 1,  0, 0]])"
+       "[-1,  1,  0,  0,  0,  0],\n",
+       "[ 1, -1, -1,  0,  0,  0],\n",
+       "[ 0,  0,  1, -1,  0,  0],\n",
+       "[ 0,  1,  0,  0,  0, -1],\n",
+       "[ 0,  0,  0, -1,  0,  1],\n",
+       "[ 0,  0,  0,  1, -1,  0],\n",
+       "[ 0,  0,  0,  0,  1, -1],\n",
+       "[-1,  0, -1,  0,  0,  0],\n",
+       "[ 0,  0,  0,  0,  1,  0]])"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mod2.external_SM"
+    "n = CombinedSM(M1,M2)\n",
+    "\n",
+    "n.construct_new_SM()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26baf4bc",
+   "id": "a4a2b6c6",
    "metadata": {},
    "outputs": [],
    "source": []
