now also works if no overlapping species between modules

--- a/students/Will/combined_module_SM.ipynb
+++ b/students/Will/combined_module_SM.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "ec7248d5",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "e909e067",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "11355fc1",
    "metadata": {},
    "outputs": [],
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "3ecc6ceb",
    "metadata": {},
    "outputs": [
@@ -102,7 +102,7 @@
        "[ 0,  0,  1]])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "f44e3642",
    "metadata": {},
    "outputs": [
@@ -130,7 +130,7 @@
        "[ 0,  0,  0,  1, -1]])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 17,
    "id": "35cfe884",
    "metadata": {},
    "outputs": [],
@@ -271,12 +271,20 @@
     "\n",
     "        # The line that contains the conjugated rows goes here\n",
     "        #========================================\n",
-    "        new_SM_line_2 = self.conjugated_rows[0]\n",
-    "        \n",
-    "        for vector in self.conjugated_rows[1:]:\n",
-    "            new_SM_line_2 = new_SM_line_2.col_join(vector)\n",
-    "            # print(\"Block containing overlapping species:\")\n",
-    "            # print(new_SM_line_2)\n",
+    "        if not self.conjugated_rows:\n",
+    "\n",
+    "            use_line_2 = False\n",
+    "\n",
+    "        else:\n",
+    "\n",
+    "            use_line_2 = True\n",
+    "\n",
+    "            new_SM_line_2 = self.conjugated_rows[0]\n",
+    "            \n",
+    "            for vector in self.conjugated_rows[1:]:\n",
+    "                new_SM_line_2 = new_SM_line_2.col_join(vector)\n",
+    "                # print(\"Block containing overlapping species:\")\n",
+    "                # print(new_SM_line_2)\n",
     "        #========================================\n",
     "    \n",
     "        new_SM_line_3 = lower_left_internals.row_join(self.mod2.internal_SM)\n",
@@ -289,7 +297,14 @@
     "        \n",
     "        # Final SM\n",
     "\n",
-    "        new_SM = new_SM_line_1.col_join(new_SM_line_2).col_join(new_SM_line_3).col_join(new_SM_line_4).col_join(new_SM_line_5)\n",
+    "        if use_line_2:\n",
+    "\n",
+    "            new_SM = new_SM_line_1.col_join(new_SM_line_2).col_join(new_SM_line_3).col_join(new_SM_line_4).col_join(new_SM_line_5)\n",
+    "\n",
+    "        else:\n",
+    "\n",
+    "            new_SM = new_SM_line_1.col_join(new_SM_line_3).col_join(new_SM_line_4).col_join(new_SM_line_5)\n",
+    "\n",
     "\n",
     "\n",
     "        return new_SM\n",
@@ -313,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 7,
    "id": "ea1c6e49",
    "metadata": {},
    "outputs": [],
@@ -339,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 19,
    "id": "c6b0b32b",
    "metadata": {},
    "outputs": [
@@ -364,7 +379,7 @@
        "[ 0,  0,  0,  0,  0,  1,  0,  0]])"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -374,7 +389,9 @@
     "mod2 = AssignProperties(stoich_matrix_2, num_internal_species_2, labels_2)\n",
     "\n",
     "l = CombinedSM(mod1,mod2)\n",
-    "l.construct_new_SM()"
+    "l.construct_new_SM()\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -387,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 14,
    "id": "26baf4bc",
    "metadata": {},
    "outputs": [],
@@ -398,13 +415,16 @@
     "SM_2 = Matrix([[-1,0,1],[1,-1,0],[0,1,-1],[-1,0,0],[0,0,-1],[0,1,0]])\n",
     "internals_2 = 3\n",
     "\n",
-    "labels_1_new = {0: 'B', 1: 'C', 2: 'A', 3: 'D', 4: 'E'}\n",
-    "labels_2_new = {0: 'F', 1: 'G', 2: 'H', 3: 'D', 4: 'E', 5:'I'}\n"
+    "# labels_1_new = {0: 'B', 1: 'C', 2: 'A', 3: 'D', 4: 'E'}\n",
+    "# labels_2_new = {0: 'F', 1: 'G', 2: 'H', 3: 'D', 4: 'E', 5:'I'}\n",
+    "\n",
+    "labels_1_new = {0: 'A', 1: 'B', 2: 'C', 3: 'D', 4: 'E'}\n",
+    "labels_2_new = {0: 'F', 1: 'G', 2: 'H', 3: 'I', 4: 'J', 5:'K'}\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 15,
    "id": "1cfbd734",
    "metadata": {},
    "outputs": [],
@@ -416,29 +436,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 18,
    "id": "c937fe49",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\left[\\begin{matrix}-1 & 1 & 0 & 0 & 0 & 0\\\\1 & -1 & -1 & 0 & 0 & 0\\\\0 & 0 & 1 & -1 & 0 & 0\\\\0 & 1 & 0 & 0 & 0 & -1\\\\0 & 0 & 0 & -1 & 0 & 1\\\\0 & 0 & 0 & 1 & -1 & 0\\\\0 & 0 & 0 & 0 & 1 & -1\\\\-1 & 0 & -1 & 0 & 0 & 0\\\\0 & 0 & 0 & 0 & 1 & 0\\end{matrix}\\right]$"
+       "$\\displaystyle \\left[\\begin{matrix}-1 & 1 & 0 & 0 & 0 & 0\\\\1 & -1 & -1 & 0 & 0 & 0\\\\0 & 0 & 0 & -1 & 0 & 1\\\\0 & 0 & 0 & 1 & -1 & 0\\\\0 & 0 & 0 & 0 & 1 & -1\\\\-1 & 0 & -1 & 0 & 0 & 0\\\\0 & 0 & 1 & 0 & 0 & 0\\\\0 & 1 & 0 & 0 & 0 & 0\\\\0 & 0 & 0 & -1 & 0 & 0\\\\0 & 0 & 0 & 0 & 0 & -1\\\\0 & 0 & 0 & 0 & 1 & 0\\end{matrix}\\right]$"
       ],
       "text/plain": [
        "Matrix([\n",
        "[-1,  1,  0,  0,  0,  0],\n",
        "[ 1, -1, -1,  0,  0,  0],\n",
-       "[ 0,  0,  1, -1,  0,  0],\n",
-       "[ 0,  1,  0,  0,  0, -1],\n",
        "[ 0,  0,  0, -1,  0,  1],\n",
        "[ 0,  0,  0,  1, -1,  0],\n",
        "[ 0,  0,  0,  0,  1, -1],\n",
        "[-1,  0, -1,  0,  0,  0],\n",
+       "[ 0,  0,  1,  0,  0,  0],\n",
+       "[ 0,  1,  0,  0,  0,  0],\n",
+       "[ 0,  0,  0, -1,  0,  0],\n",
+       "[ 0,  0,  0,  0,  0, -1],\n",
        "[ 0,  0,  0,  0,  1,  0]])"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,13 +468,14 @@
    "source": [
     "n = CombinedSM(M1,M2)\n",
     "\n",
-    "n.construct_new_SM()"
+    "n.construct_new_SM()\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a4a2b6c6",
+   "id": "85a2b527",
    "metadata": {},
    "outputs": [],
    "source": []
