now auto-calcs number of internal species in new SM

--- a/students/Will/combined_module_SM.ipynb
+++ b/students/Will/combined_module_SM.ipynb
@@ -314,7 +314,8 @@
     "        the new SM \"\"\"\n",
     "\n",
     "        list_of_species = []\n",
-    "        \n",
+    "        internal_species_added = 0\n",
+    "\n",
     "        # === internal species of mod1 ===\n",
     "        \n",
     "        for l in range(0, self.mod1.num_internal_species):\n",
@@ -323,6 +324,8 @@
     "                l += 1\n",
     "            else:\n",
     "                list_of_species.append(self.mod1.species_names[l])\n",
+    "\n",
+    "                internal_species_added += 1\n",
     "\n",
     "\n",
     "        # === find overlapping species names ===\n",
@@ -333,9 +336,8 @@
     "                l += 1\n",
     "            else:\n",
     "                list_of_species.append(self.mod1.species_names[key + self.mod1.num_internal_species])\n",
-    "        \n",
-    "        print(self.mod1.species_names[key + self.mod1.num_internal_species])\n",
-    "        \n",
+    "\n",
+    "                internal_species_added += 1\n",
     "\n",
     "        # === internals of mod2 ===\n",
     "\n",
@@ -346,6 +348,7 @@
     "            else:\n",
     "                list_of_species.append(self.mod2.species_names[l])\n",
     "\n",
+    "                internal_species_added += 1\n",
     "      \n",
     "\n",
     "        # === external species of mod1 and mod2 ===\n",
@@ -371,7 +374,7 @@
     "        \n",
     "        self.final_dict = {i: v for i, v in enumerate(self.final_list)}\n",
     "\n",
-    "        return self.final_list, self.final_dict\n",
+    "        return self.final_list, self.final_dict, internal_species_added\n",
     "\n",
     "        \n",
     "\n",
