--- a/students/Will/combined_module_SM.ipynb
+++ b/students/Will/combined_module_SM.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "ec7248d5",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "e909e067",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "11355fc1",
    "metadata": {},
    "outputs": [],
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "3ecc6ceb",
    "metadata": {},
    "outputs": [
@@ -102,7 +102,7 @@
        "[ 0,  0,  1]])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "f44e3642",
    "metadata": {},
    "outputs": [
@@ -130,7 +130,7 @@
        "[ 0,  0,  0,  1, -1]])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "35cfe884",
    "metadata": {},
    "outputs": [],
@@ -175,10 +175,10 @@
     "        # essentially creates a dictionary of external species\n",
     "\n",
     "        self.mod1_external_species_list = {\n",
-    "            i: v for i, v in enumerate(list(self.mod1.hypergraph_labels.values())[self.mod1.internal_SM.rows:])\n",
+    "            i: v for i, v in enumerate(list(self.mod1.labels.values())[self.mod1.internal_SM.rows:])\n",
     "        }\n",
     "        self.mod2_external_species_list = {\n",
-    "            i: v for i, v in enumerate(list(self.mod2.hypergraph_labels.values())[self.mod2.internal_SM.rows:])\n",
+    "            i: v for i, v in enumerate(list(self.mod2.labels.values())[self.mod2.internal_SM.rows:])\n",
     "        }\n",
     "        # print(self.mod1_external_species_list)\n",
     "        # print(self.mod2_external_species_list)\n",
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "ea1c6e49",
    "metadata": {},
    "outputs": [],
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "c6b0b32b",
    "metadata": {},
    "outputs": [
@@ -453,7 +453,7 @@
        "[ 0,  0,  0,  0,  0,  1,  0,  0]])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "26baf4bc",
    "metadata": {},
    "outputs": [],
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "id": "1cfbd734",
    "metadata": {},
    "outputs": [],
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "id": "c937fe49",
    "metadata": {},
    "outputs": [
@@ -534,7 +534,7 @@
        "[ 0,  0,  0,  0,  1,  0]])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "id": "85a2b527",
    "metadata": {},
    "outputs": [
@@ -573,7 +573,7 @@
        "[ 0,  0,  0,  0,  0,  1,  0,  0]])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -595,7 +595,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "conductance",
    "language": "python",
    "name": "python3"
   },
@@ -609,7 +609,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
