--- a/students/Will/building_CM_using_Raux_2025.ipynb
+++ b/students/Will/building_CM_using_Raux_2025.ipynb
@@ -18,7 +18,9 @@
    "id": "4fe8155a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# small change"
+   ]
   },
   {
    "cell_type": "code",
